--- a/stack.html
+++ b/stack.html
@@ -9,8 +9,8 @@
       <link rel="stylesheet" href="./Bootstrap/bootstrap.css">
    </head>
    <body>
-      <div class="mainSection d-flex justify-content-center flex-column">
-         <div class="header d-flex justify-content-evenly">
+      <div class="mainSection d-flex justify-content-center flex-column col-12">
+         <div class="header d-flex justify-content-evenly col-12">
             <div class="stackLogo">
                <img class="logo d-none d-md-flex" src="./Assets/logoo.png" alt="logo">
                <div class="logoBetween d-flex justify-content-center align-items-center">
@@ -122,7 +122,7 @@
                </div>
             </div>
          </div>
-         <div class="headermainSection d-flex flex-column col-10">
+         <div class="headermainSection d-flex flex-column">
             <div class="userInformation d-flex   flex-sm-row justify-content-between">
                <div class="users d-flex flex-column flex-lg-row">
                   <div class="userImage">
@@ -294,7 +294,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="secondmainRightSecondPart d-flex flex-column">
+                  <div class="secondmainRightSecondPart d-flex flex-column ">
                      <div class="badgesContents d-flex align-items-baseline justify-content-between">
                         <div class="badgesTxt">
                            <h3>Badges</h3>
@@ -303,9 +303,9 @@
                            <p class="viewAllTxt">View all badges</p>
                         </div>
                      </div>
-                     <div class="boxsec d-xl-flex">
-                        <div class="boxSection d-sm-flex col">
-                           <div class="goldBox d-flex flex-column col-sm-7 py-2">
+                     <div class="boxsec d-xl-flex justify-content-around">
+                        <div class="boxSection d-flex d-sm-flex">
+                           <div class="goldBox d-flex flex-column  col-8 py-2">
                               <div class="goldBoxInside d-flex">
                                  <img class="goldBadge" src="./Assets/goldBadge.png" alt="image">
                                  <div class="goldBadgeTxt">
@@ -352,7 +352,7 @@
                                  </div>
                               </div>
                            </div>
-                           <div class="silverBox d-flex flex-column col-sm-7 py-2">
+                           <div class="silverBox d-flex flex-column col-8 py-2 ms-3">
                               <div class="silverBoxInside d-flex">
                                  <img class="silverBadge" src="./Assets/silverBadge.png" alt="image">
                                  <div class="silverBadgeTxt">
@@ -400,7 +400,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="bronzeBox d-flex flex-column col-lg-12 col-xl-4 py-2 ms-sm-3">
+                        <div class="bronzeBox d-flex flex-column  col-xl-4 py-2 ms-sm-3 col-12">
                            <div class="bronzeBoxInside d-flex">
                               <img class="bronzeBadge" src="./Assets/bronzeBadge.png" alt="image">
                               <div class="bronzeBadgeTxt">
